test/testdata/network/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: dynatrace
spec:
  containers:
    - args:
      - https://dynakube-activegate.dynatrace.svc.cluster.local/rest/state
      - -k
      command:
      - curl
      name: curl
      image: curlimages/curl
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
  restartPolicy: "Never"
