test/testdata/network/dynatrace-denial.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "dynatrace-deny-egress-to-world"
  namespace: dynatrace
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - "cluster"
  ingress:
    - fromEntities:
        - "cluster"
