test/testdata/network/dynatrace-kube-system-approval.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "dynatrace-kube-system-approval"
  namespace: dynatrace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
