test/testdata/network/dynatrace-openshift-approval.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "dynatrace-openshift-approval"
  namespace: dynatrace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - {
                key: kubernetes.io/metadata.name,
                operator: In,
                values: [
                  istio-system,
                  kube-node-lease,
                  kube-public,
                  kube-system,
                  openshift,
                  openshift-apiserver,
                  openshift-apiserver-operator,
                  openshift-authentication,
                  openshift-authentication-operator,
                  openshift-cloud-controller-manager,
                  openshift-cloud-controller-manager-operator,
                  openshift-cloud-credential-operator,
                  openshift-cloud-network-config-controller,
                  openshift-cluster-csi-drivers,
                  openshift-cluster-machine-approver,
                  openshift-cluster-node-tuning-operator,
                  openshift-cluster-samples-operator,
                  openshift-cluster-storage-operator,
                  openshift-cluster-version,
                  openshift-config,
                  openshift-config-managed,
                  openshift-config-operator,
                  openshift-console,
                  openshift-console-operator,
                  openshift-console-user-settings,
                  openshift-controller-manager,
                  openshift-controller-manager-operator,
                  openshift-dns,
                  openshift-dns-operator,
                  openshift-etcd,
                  openshift-etcd-operator,
                  openshift-host-network,
                  openshift-image-registry,
                  openshift-infra,
                  openshift-ingress,
                  openshift-ingress-canary,
                  openshift-ingress-operator,
                  openshift-insights,
                  openshift-kni-infra,
                  openshift-kube-apiserver,
                  openshift-kube-apiserver-operator,
                  openshift-kube-controller-manager,
                  openshift-kube-controller-manager-operator,
                  openshift-kube-scheduler,
                  openshift-kube-scheduler-operator,
                  openshift-kube-storage-version-migrator,
                  openshift-kube-storage-version-migrator-operator,
                  openshift-machine-api,
                  openshift-machine-config-operator,
                  openshift-marketplace,
                  openshift-monitoring,
                  openshift-multus,
                  openshift-network-diagnostics,
                  openshift-network-operator,
                  openshift-node,
                  openshift-nutanix-infra,
                  openshift-oauth-apiserver,
                  openshift-openstack-infra,
                  openshift-operator-lifecycle-manager,
                  openshift-operators,
                  openshift-ovirt-infra,
                  openshift-route-controller-manager,
                  openshift-sdn,
                  openshift-service-ca,
                  openshift-service-ca-operator,
                  openshift-user-workload-monitoring,
                  openshift-vsphere-infra
                ] }
