test/testdata/network/proxy-ssl-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy
  annotations:
    dynatrace.com/inject: "false"
  labels:
    app: squid
