test/testdata/network/proxy-ssl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy
  annotations:
    dynatrace.com/inject: "false"
  labels:
    app: squid
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: proxy
  namespace: proxy
---
apiVersion: v1
kind: Secret
metadata:
  name: proxy-ca
  namespace: proxy
data:
  squid-ca-cert.pem: |
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURhekNDQWxPZ0F3SUJBZ0lVZEtHTnVXeG0xdDdhdUN0aytSWUFnTUtDNHdrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1JURUxNQWtHQTFVRUJoTUNRVlV4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeElUQWZCZ05WQkFvTQpHRWx1ZEdWeWJtVjBJRmRwWkdkcGRITWdVSFI1SUV4MFpEQWVGdzB5TXpBNE1EY3hNelV6TWpCYUZ3MHlOREE0Ck1EWXhNelV6TWpCYU1FVXhDekFKQmdOVkJBWVRBa0ZWTVJNd0VRWURWUVFJREFwVGIyMWxMVk4wWVhSbE1TRXcKSHdZRFZRUUtEQmhKYm5SbGNtNWxkQ0JYYVdSbmFYUnpJRkIwZVNCTWRHUXdnZ0VpTUEwR0NTcUdTSWIzRFFFQgpBUVVBQTRJQkR3QXdnZ0VLQW9J [...]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: configfile
  namespace: proxy
data:
  squid.conf: |
    acl localnet src 0.0.0.1-0.255.255.255	# RFC 1122 "this" network (LAN)
    acl localnet src 10.0.0.0/8		# RFC 1918 local private network (LAN)
    acl localnet src 100.64.0.0/10		# RFC 6598 shared address space (CGN)
    acl localnet src 169.254.0.0/16 	# RFC 3927 link-local (directly plugged) machines
    acl localnet src 172.16.0.0/12		# RFC 1918 local private network (LAN)
    acl localnet src 192.168.0.0/16		# RFC 1918 local private network (LAN)
    acl localnet src fc00::/7       	# RFC 4193 local private network range
    acl localnet src fe80::/10      	# RFC 4291 link-local (directly plugged) machines
    acl SSL_ports port 443
    acl Safe_ports port 80		# http
    acl Safe_ports port 21		# ftp
    acl Safe_ports port 443		# https
    acl Safe_ports port 70		# gopher
    acl Safe_ports port 210		# wais
    acl Safe_ports port 1025-65535	# unregistered ports
    acl Safe_ports port 280		# http-mgmt
    acl Safe_ports port 488		# gss-http
    acl Safe_ports port 591		# filemaker
    acl Safe_ports port 777		# multiling http
    acl CONNECT method CONNECT
    http_access deny !Safe_ports
    http_access deny CONNECT !SSL_ports
    http_access allow localhost manager
    http_access deny manager
    http_access allow localhost
    http_access allow localnet
    http_access deny all
    ## Use the below to avoid proxy-chaining
    always_direct allow all
    acl step1 at_step SslBump1
    ssl_bump peek step1
    ssl_bump bump all
    ssl_bump splice all
    http_port 3128 ssl-bump cert=/etc/squid-cert/squid-ca-cert.pem generate-host-certificates=on generate-host-certificates=on dynamic_cert_mem_cache_size=16MB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: squid
  name: squid
  namespace: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      annotations:
        dynatrace.com/inject: "false"
      labels:
        app: squid
    spec:
      serviceAccountName: proxy
      containers:
      - image: ghcr.io/b4tman/squid-ssl-bump:6.6
        name: squid
        env:
          - name: SQUID_CONFIG_FILE
            value: /etc/squid-config/squid.conf
        volumeMounts:
          - mountPath: /etc/squid-config/
            name: config-volume
          - mountPath: /etc/squid-cert/
            name: proxy-ca-volume
        securityContext:
          privileged: true
          capabilities:
            add:
             - CAP_NET_RAW

      volumes:
        - name: config-volume
          configMap:
            name: configfile
        - name: proxy-ca-volume
          secret:
            secretName: proxy-ca
            items:
            - key: squid-ca-cert.pem
              path: squid-ca-cert.pem
---
apiVersion: v1
kind: Service
metadata:
  name: squid
  namespace: proxy
spec:
  selector:
    app: squid
  ports:
  - port: 3128
    targetPort: 3128

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: squid
  namespace: dynatrace
spec:
  hosts:
  - squid.proxy.svc.cluster.local
  ports:
    - number: 3128
      name: tcp
      protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
