test/testdata/network/sample-ns-denial.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "sample-ns-deny-egress-to-world"
  namespace: test-namespace-1
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - "cluster"
  ingress:
    - fromEntities:
        - "cluster"
